Date	Added
12/14
	* Added a busy animation for npc loading [MC Cameri]
	* Replaced the way map loading was displayed into a progress-like way [MC Cameri]
	* Fixed some typos in _ShowMessage() [MC Cameri]
	* Replaced lots of more printf's in map-server with _ShowMessage() [MC Cameri]
	* Added constants for console colors in showmsg.h [MC Cameri]
	* src/char_sql/int_guild.c:56 - t_mes2 was not big enough causing
	  stack overrun's, corruptions, and crashes [MouseJstr]
	* common/mmo.h: changed base_level and job_level to unsigned int to increase max levels [Codemaster]
	* char/char.c: added a NULL check for the file in parse_friend_txt [Codemaster]
	* map/atcommand.c/.h: added @clearweather (thanks to Dexity) [Codemaster]
	* map/charcommand.c/.h: added #spiritball [Codemaster]
	* map/mob.c: fixed a compiler warning (ln was an int and was supposed to be an unsigned long int) [Codemaster]
        * Added nullpo_retb to nullpo.c - does a break; if null [celest]
        * Replaced some parts in skill.c with nullpo checks [celest]
        * Corrected some typos - penaly -> penalty [celest]
        * Skill Updates [celest]
          - Most of 12/14's Sakray patch
	* The SKILL_MAX_DB (yes, a different #define from the one below)
	  was not large enough for current skills causing memory 
	  corruptions and crashes [MouseJstr]
	* Fixed how socket handles EAGIN errors (retry instead of
	  disconnecting) [MouseJstr]

12/13
        * Skill Updates [celest]
          - Added the new 'Throw Tomahawk' skill (Requires Sakexe1129 or newer) 
          - Added some new monster skills - but still not complete.
          - Adjusted Palm Strike, Tiger Fist and Chain Crush based on 12/14's patch
        * Removed redundant 'sg_count' for map_session_data and mob_data [celest]
        * Save both persons' data after trading in case a crash causes them to
          rollback -  fix by Freya [celest]
        * Removed 'type' paramater from pc_unequipitem to use 'flag' instead[celest]